hover bug on mobiles fixed

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -35,7 +35,7 @@
 
 .fadeOut_1 {
   animation-name: fadeOut_1;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-fill-mode: both;
   animation-timing-function: ease-out;
 }
@@ -55,7 +55,7 @@
 
 .fadeOut_2 {
   animation-name: fadeOut_2;
-  animation-duration: 8s;
+  animation-duration: 4s;
   animation-fill-mode: both;
   animation-timing-function: ease-out;
 }
@@ -91,7 +91,7 @@
 
 .fadeIn {
   animation-name: fadeIn;
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-fill-mode: both;
   animation-timing-function: ease-out;
 }
